commited upto slider test

--- a/workspace/Parameters/res/values/strings.xml
+++ b/workspace/Parameters/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_add">AddActivity</string>
     <string name="title_activity_add_record">AddRecordActivity</string>
+    <string name="title_activity_add_parameter_value">AddParameterValueActivity</string>
 
 </resources>
